--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "dependencies": {
     "@apollo/server": "^4.7.5",
-    "@nestjs/apollo": "^12.0.4",
+    "@nestjs/apollo": "^12.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/graphql": "^12.0.4",
+    "@nestjs/graphql": "^12.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
