feat: add auth and passport

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-DATABASE=desafio-voltbras
+DATABASE=desafiovoltbras
 DB_USERNAME=desafio
 DB_PASSWORD=voltbras
 DB_HOST=database
 DB_PORT=5432
+SALT=12
+JWT_SECRET=desafio@voltbras
